{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 470,
  "lineage": "bf10fb97-f919-81e5-db87-453d9c013382",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rlmgt_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d8e773acfe49a694",
            "owner_id": "496124100072",
            "tags": {
              "Name": "greencityRelMgtIGW"
            },
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rlmgt_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:loadbalancer/app/greencityRelMgtElb/86d040bc62da81aa",
            "arn_suffix": "app/greencityRelMgtElb/86d040bc62da81aa",
            "dns_name": "greencityRelMgtElb-1156186967.eu-central-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:loadbalancer/app/greencityRelMgtElb/86d040bc62da81aa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "greencityRelMgtElb",
            "security_groups": [
              "sg-0c9d9c01fd1257cd1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e16ccd1d2b69c50"
              },
              {
                "subnet_id": "subnet-0685932dddbc0a409"
              },
              {
                "subnet_id": "subnet-0a096472ff7c51751"
              }
            ],
            "subnets": [
              "subnet-04e16ccd1d2b69c50",
              "subnet-0685932dddbc0a409",
              "subnet-0a096472ff7c51751"
            ],
            "vpc_id": "vpc-0cfd945308b8d7afb",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "depends_on": [
            "aws_security_group.rlmgt_elb_sg",
            "aws_subnet.rlmgt_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rlmgt_elb_listener_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:listener/app/greencityRelMgtElb/86d040bc62da81aa/32e0af471ee60619",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:listener/app/greencityRelMgtElb/86d040bc62da81aa/32e0af471ee60619",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:loadbalancer/app/greencityRelMgtElb/86d040bc62da81aa",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.rlmgt_elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rlmgt_elb_listener_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:listener/app/greencityRelMgtElb/86d040bc62da81aa/86f6a890ae77a20a",
            "certificate_arn": "arn:aws:acm:eu-central-1:496124100072:certificate/0fa0b06b-902f-49d1-bbe9-7379493cbb6c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:targetgroup/greencityRelMgtTargetGroup/f9d27421ed001465",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:listener/app/greencityRelMgtElb/86d040bc62da81aa/86f6a890ae77a20a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:loadbalancer/app/greencityRelMgtElb/86d040bc62da81aa",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.rlmgt_elb",
            "aws_lb_target_group.rlmgt_elb_target_group",
            "data.aws_acm_certificate.rlmgt_domain_certificate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rlmgt_elb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:targetgroup/greencityRelMgtTargetGroup/f9d27421ed001465",
            "arn_suffix": "targetgroup/greencityRelMgtTargetGroup/f9d27421ed001465",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:496124100072:targetgroup/greencityRelMgtTargetGroup/f9d27421ed001465",
            "lambda_multi_value_headers_enabled": false,
            "name": "greencityRelMgtTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rlmgt_network_acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 80
              }
            ],
            "id": "acl-045ba2d34920ab74d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "496124100072",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-04e16ccd1d2b69c50",
              "subnet-0685932dddbc0a409",
              "subnet-0a096472ff7c51751"
            ],
            "tags": {
              "Name": "greencityRelMgtNetworkACL"
            },
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rlmgt_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c81d007a8da6f7cd",
            "owner_id": "496124100072",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8e773acfe49a694",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "greencityRelMgtRoute"
            },
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_internet_gateway.rlmgt_igw",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rlmgt_route_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f452891200c5ce1b",
            "route_table_id": "rtb-0c81d007a8da6f7cd",
            "subnet_id": "subnet-0a096472ff7c51751"
          },
          "depends_on": [
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4cadb2d33e83e28",
            "route_table_id": "rtb-0c81d007a8da6f7cd",
            "subnet_id": "subnet-04e16ccd1d2b69c50"
          },
          "depends_on": [
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006dd2573e30694fe",
            "route_table_id": "rtb-0c81d007a8da6f7cd",
            "subnet_id": "subnet-0685932dddbc0a409"
          },
          "depends_on": [
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_efs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:security-group/sg-0ff3764b62c40a285",
            "description": "Release Mgt EFS Security Group",
            "egress": [],
            "id": "sg-0ff3764b62c40a285",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Instances can access to EFS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0408be63a7d812ec2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "greencityRelMgtEfsSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "greencityRelMgtInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_security_group.rlmgt_instance_sg",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:security-group/sg-0c9d9c01fd1257cd1",
            "description": "Release Mgt ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Instances access (Web page and health check)",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c9d9c01fd1257cd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "greencityRelMgtElbSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "greencityRelMgtElbSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:security-group/sg-0408be63a7d812ec2",
            "description": "Release Mgt Instance Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connection from EC2 to Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0408be63a7d812ec2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "HTTP requests from ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c9d9c01fd1257cd1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "greencityRelMgtInstanceSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "greencityRelMgtInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_security_group.rlmgt_elb_sg",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rlmgt_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0a096472ff7c51751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0a096472ff7c51751",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-04e16ccd1d2b69c50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04e16ccd1d2b69c50",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0685932dddbc0a409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0685932dddbc0a409",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "vpc_id": "vpc-0cfd945308b8d7afb"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rlmgt_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:vpc/vpc-0cfd945308b8d7afb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0219f364c63d09c",
            "default_route_table_id": "rtb-0b5615a0bc2b61752",
            "default_security_group_id": "sg-0379819e59eafd1b6",
            "dhcp_options_id": "dopt-79c48912",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cfd945308b8d7afb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5615a0bc2b61752",
            "owner_id": "496124100072",
            "tags": {
              "Name": "greencityRelMgtVPC"
            }
          }
        }
      ]
    }
  ]
}